--- a/misc/vsd23vs25.html
+++ b/misc/vsd23vs25.html
@@ -179,6 +179,87 @@
                 </table>
                 <p><strong>目前狀態：</strong>遠低於警示值 (安全範圍80%)，每6-12月追蹤即可。</p>
             </div>
+
+            <div class="answer">
+                <div class="question">Q4: 4.98m/s已接近5m/s，還正常嗎？>5m/s會怎樣？</div>
+                <p><strong>答：</strong><span class="status stable">4.98m/s仍正常</span>（小VSD典型範圍），成長導致輕升，非惡化。</p>
+                <table class="threshold-table">
+                    <thead><tr><th>Vmax</th><th>壓力</th><th>風險等級</th><th>建議</th></tr></thead>
+                    <tbody>
+                        <tr><td>4-5 m/s (目前)</td><td>64-100 mmHg</td><td><span class="status stable">安全</span></td><td>每6-12月</td></tr>
+                        <tr><td>5-5.5 m/s</td><td>100-121 mmHg</td><td><span class="status watch">注意</span></td><td>每3-6月</td></tr>
+                        <tr class="change-watch"><td>>5.5 m/s</td><td>>121 mmHg</td><td>肺高壓風險</td><td>評估手術</td></tr>
+                    </tbody>
+                </table>
+                <p><strong>安心：</strong>目前遠低風險，持續監測即可。</p>
+            </div>
+
+            <div class="answer">
+                <div class="question">Q5: 搭飛機出國玩 (台灣→日本/韓國) 有風險嗎？</div>
+                <p><strong>答：</strong><span class="status good">風險極低，可正常出國！</span> 小VSD(5.23mm)+EF52.3%+無肺高壓，短程2-3小時航班安全。</p>
+                <table class="threshold-table">
+                    <thead><tr><th>風險評估</th><th>孩子狀況</th><th>結論</th></tr></thead>
+                    <tbody>
+                        <tr><td>艙壓變化 (8,000呎)</td><td>耐受良好</td><td><span class="status good">安全 ✓</span></td></tr>
+                        <tr><td>Vmax 4.98m/s</td><td>未超5m/s</td><td><span class="status stable">正常範圍</span></td></tr>
+                        <tr><td>TR僅2.31m/s</td><td>無肺高壓</td><td><span class="status good">低風險</span></td></tr>
+                    </tbody>
+                </table>
+
+                <h4 style="color: #28a745; margin: 15px 0 10px 0;">✈️ 出國注意事項</h4>
+                <ul style="padding-left: 20px; margin-bottom: 10px;">
+                    <li><strong>出發前：</strong>醫師旅行證明+攜報告</li>
+                    <li><strong>機上：</strong>起降喝水/嚼糖，選走道位</li>
+                    <li><strong>行李：</strong>輕便，避免過重</li>
+                    <li><strong>監測：</strong>觀察呼吸/唇色異常</li>
+                    <li><strong>保險：</strong>加買既有疾病醫療險</li>
+                </ul>
+                <p><strong>安心出遊：</strong>台灣→日韓完全OK！冬天最佳，玩完回台半年追蹤即可。❤️</p>
+            </div>
+
+            <div class="answer">
+                <div class="question">Q6: 柴山木棧道登山(307m)有風險嗎？</div>
+                <p><strong>答：</strong><span class="status good">零風險，可安心登！</span> 低海拔+輕鬆步道，小VSD完全耐受。</p>
+                <table class="threshold-table">
+                    <thead><tr><th>評估</th><th>孩子狀況</th><th>結論</th></tr></thead>
+                    <tbody>
+                        <tr><td>海拔307m</td><td>氧氣差<1%</td><td><span class="status good">無影響 ✓</span></td></tr>
+                        <tr><td>木棧道步行</td><td>低強度</td><td><span class="status good">正常活動</span></td></tr>
+                        <tr><td>EF 52.3%</td><td>心功能佳</td><td><span class="status good">安全保障</span></td></tr>
+                    </tbody>
+                </table>
+                <h4 style="color: #28a745; margin: 15px 0 10px 0;">🏞️ 注意事項</h4>
+                <ul style="padding-left: 20px;">
+                    <li>慢速散步，每10分休息</li>
+                    <li>晴天早上去，<2小時</li>
+                    <li>攜水零食，觀察臉色呼吸</li>
+                    <li>家人同行，輕便裝備</li>
+                </ul>
+                <p><strong>親子樂：</strong>柴山完美入門，登頂喝茶享受風景！</p>
+            </div>
+
+            <div class="answer">
+            <div class="question">Q7: 樓梯訓練48m出現輕咳正常嗎？可持續訓練？</div>
+            <p><strong>答：</strong><span class="status good">完全正常且有益！</span> 輕咳=呼吸適應，持續訓練耐力↑，心臟零負擔。</p>
+            <table class="threshold-table">
+                <thead><tr><th>現象</th><th>意義</th><th>結論</th></tr></thead>
+                <tbody>
+                    <tr><td>輕咳<10次</td><td>正常換氣反應</td><td><span class="status good">安全 ✓</span></td></tr>
+                    <tr><td>48m高度</td><td>低強度</td><td><span class="status good">心肺訓練</span></td></tr>
+                    <tr><td>每天持續</td><td>改善柴山耐力</td><td><span class="status good">強烈推薦</span></td></tr>
+                </tbody>
+            </table>
+            <h4 style="color: #28a745;">🏃‍♂️ 訓練建議</h4>
+            <ul style="padding-left: 20px;">
+                <li><strong>漸進：</strong>3F→6F→14F，每次休息</li>
+                <li><strong>時間：</strong>每天10-15分，無不適停</li>
+                <li><strong>監測：</strong>無胸悶/臉白即OK</li>
+                <li><strong>目標：</strong>2週後柴山無壓力！</li>
+            </ul>
+            <p><strong>好消息：</strong>孩子體能優秀，訓練後登山更輕鬆！💪</p>
+        </div>
+
+
         </div>
 
         <div style="text-align: center; padding: 20px;">
