--- a/misc/vsd23vs25.html
+++ b/misc/vsd23vs25.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>孩子VSD完整追蹤報告 (最終完整版+詳細數據)</title>
+    <title>VSD追蹤報告</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Microsoft JhengHei', 'Noto Sans TC', sans-serif; line-height: 1.6; color: #333; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); padding: 20px; }
@@ -47,8 +47,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>❤️ 孩子VSD完整追蹤報告 (最終完整版)</h1>
-            <p>2023/04/28 vs 2025/06/27 | 完整數據+所有問題解答</p>
+            <h1>❤️ VSD追蹤報告</h1>
+            <p>2023/04/28 vs 2025/06/27</p>
         </header>
 
         <div class="info-grid">
@@ -146,7 +146,7 @@
         </div>
 
         <div class="qna-section">
-            <h3 style="color: #667eea; margin-bottom: 20px; text-align: center;">💬 家長提問完整解答</h3>
+            <h3 style="color: #667eea; margin-bottom: 20px; text-align: center;">💬 提問與解答</h3>
 
             <div class="answer">
                 <div class="question">Q1: VSD血流速度(Vmax)輕微增加是有益的嗎？</div>
@@ -267,8 +267,7 @@
         </div>
 
         <footer>
-            <p>生成時間: 2025/12/19 | 完整數據+3大問題解答+動脈瘤監測標準</p>
-            <p>⚠️ 此分析僅供參考，請諮詢心臟專科醫師進行專業判讀</p>
+            <p>生成工具: Perplexity</p>
         </footer>
     </div>
 
