--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>AI 工具</h2>
-                <p><a target="_blank" href="https://chatgpt.com/">ChatGPT</a></p>
                 <p><a target="_blank" href="https://gemini.google.com/app">Gemini</a></p>
-                <p><a target="_blank" href="https://accounts.x.ai/sign-in">Grok</a></p>
+                <p><a target="_blank" href="https://notebooklm.google/">NotebookLM</a></p>
+                <p><a target="_blank" href="https://chatgpt.com/">ChatGPT</a></p>
                 <p><a target="_blank" href="https://claude.ai/login">Claude</a></p>
                 <p><a target="_blank" href="https://www.perplexity.ai/">Perplexity</a></p>
                 <p><a target="_blank" href="https://copilot.microsoft.com/login">Copilot</a></p>
