--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>外語</h2>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=NfvkoQwEjjM">超短句 100 句</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLcPfCJuIgV5pNIga-dzEZmDTA1x16TO55">英文 Snowei</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLKWcPfZiScgAutnWOSAh2AH026L9w8c18">美英 Vanessa</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLzMXToX8KzqgNnm7qjeHR7jFSuaeESFFQ">英英 Lucy</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLD_5T89Ssbn1paEgVqsI4e53b-MDWspTW">澳英 Emma</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLt3vxY3ZDG6nGvFAvJTmqWFL8t1zA-7ia">韓文 仁愛</a></p>
-                <!-- <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLLKWqByw5sEnvzpG8loUbA2rtVIMa_kae">越南 小薇</a></p> -->
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLLKWqByw5sEnvzpG8loUbA2rtVIMa_kae">越南 小薇</a></p>
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
@@ -112,8 +111,9 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>外語 101</h2>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLneZiE_zP2-whqrn6nLB06yY4z9RM7Mwg">漢語 Rui</a></p>
+                <!-- <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLneZiE_zP2-whqrn6nLB06yY4z9RM7Mwg">漢語 Rui</a></p> -->
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLPSfPyOOcp3Qbu6DT536Y1IkcRLSLbHty">日語 Risa</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLunONiOw9GxJ_8AGB_8T2IvkJOSouSWfh">越語 Linh</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLtJL6GKh6j0WGGvMlwbyPnBpGj-2mDIOi">法語 Lya</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL_knbQpx9pBdjGxbkydtr4VxmQNJyKcyN">俄語 Katya</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL_bC0YvGkS4T6lxT5s4fjqccyy0GU9RMx">西語 Rosa</a></p>
